# Tradey-boi-x

./: .gitignore  .replit  Dashboard.py  engine.py  evening_scan.py  main.py  premarket.py  pyproject.toml  scanner.py
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--MULTI-AI-PERFORMANCE-EVALUATION-SYSTEM--1784508767790_1784508767791.txt  Pasted--Tradey-Boi-X-3-0-Opportunity-Optimisation-Engine-SAFE-_1782869615506.txt  Pasted-THIS-IS-A-READ-ONLY-SPECIFICATION-ONLY-DO-NOT-IMPLEMENT_1782821014140.txt  Pasted-TRADEY-BOI-X-v4-0-v5-0-MAJOR-UPGRADE-IMPLEMENTATION-PRO_1784503019079.txt  Pasted-TRADING-BOT-UPGRADE-REQUEST-TRADEY-BOI-X-4-0-5-0-COMPLE_1784507182367.txt  Pasted-TRADey-BOI-X-FULL-SYSTEM-TEST-BUG-AUDIT-EDGE-VALIDATION_1784596675184.txt  Pasted-TRADey-BOI-X-v3-0-ADAPTIVE-INSTITUTIONAL-UPGRADE-You-ar_1784495623828.txt  Pasted-Tradey-Boi-Pro-Autonomous-Upgrade-Full-Build-Migration-_1784592651588.txt  Pasted-Tradey-Boi-X-Institutional-Performance-Optimisation-Upg_1783042526453.txt  Pasted-Tradey-Boi-X-Safe-Profit-Factor-Optimisation-Target-1-4_1783120640960.txt  Pasted-Tradey-Boi-X-v3-0-Profit-Factor-Optimisation-Full-Valid_1783118518328.txt  Pasted-Tradey-Boi-X-v4-0-Adaptive-Gate-Validation-Self-Improve_1784515404788.txt  Pasted-You-are-now-acting-as-a-senior-quantitative-software-en_1782815836963.txt  Pasted-You-are-now-performing-a-FINAL-SYSTEM-OPTIMISATION-AUDI_1782817301467.txt  Pasted-You-are-performing-a-FINAL-CLEANLINESS-AND-EFFICIENCY-C_1782820319069.txt  Pasted-You-are-performing-a-SYSTEM-SANITY-AUDIT-on-Tradey-Boi-_1782818277539.txt  (+8 more)
(+186 files in other folders)
