[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.4",
    "plotly>=6.8.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "ta>=0.11.0",
    "yfinance>=1.5.1",
]
